--- a/locale/bo/blocks.xml
+++ b/locale/bo/blocks.xml
@@ -1,28 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <localization>
-  <entity id="searchform">
-    <locale lang="fr">formulaire de recherche</locale>
-    <locale lang="en">search form</locale>
-    <locale lang="de">Suchformular</locale>
-  </entity>
-  <entity id="searchresults">
-    <locale lang="fr">résultats de recherche</locale>
-    <locale lang="en">search results</locale>
-    <locale lang="de">Suchergebnisse</locale>
-  </entity>
-  <entity id="advancedsearch-block-error">
-    <locale lang="fr">votre bloc de recherche avancée est mal configuré!</locale>
-    <locale lang="en">your advanced search block is misconfigured!</locale>
-    <locale lang="de">Ihr Block für die erweiterte suche ist schlecht konfiguriert!</locale>
-  </entity>
-  <entity id="advancedsearch-emptyquery-error">
-    <locale lang="fr">votre recherche ne contient aucun terme valide.</locale>
-    <locale lang="en">your search contains no valid terms.</locale>
-    <locale lang="de">Ihre Suche beinhaltet keinen gültigen Begriff.</locale>
-  </entity>
-  <entity id="advancedsearch-emptyresults-error">
-    <locale lang="fr">votre recherche n'a retourné aucun résultat.</locale>
-    <locale lang="en">your search returned no hits.</locale>
-    <locale lang="de">Ihre Suche hat kein Ergebnis ergeben.</locale>
-  </entity>
+	<entity id="searchform">
+		<locale lang="fr">formulaire de recherche</locale>
+		<locale lang="en">search form</locale>
+		<locale lang="de">Suchformular</locale>
+	</entity>
+	<entity id="searchresults">
+		<locale lang="fr">résultats de recherche</locale>
+		<locale lang="en">search results</locale>
+		<locale lang="de">Suchergebnisse</locale>
+	</entity>
+	<entity id="advancedsearch-block-error">
+		<locale lang="fr">votre bloc de recherche avancée est mal configuré!</locale>
+		<locale lang="en">your advanced search block is misconfigured!</locale>
+		<locale lang="de">Ihr Block für die erweiterte suche ist schlecht konfiguriert!</locale>
+	</entity>
+	<entity id="advancedsearch-emptyquery-error">
+		<locale lang="fr">votre recherche ne contient aucun terme valide.</locale>
+		<locale lang="en">your search contains no valid terms.</locale>
+		<locale lang="de">Ihre Suche beinhaltet keinen gültigen Begriff.</locale>
+	</entity>
+	<entity id="advancedsearch-emptyresults-error">
+		<locale lang="fr">votre recherche n'a retourné aucun résultat.</locale>
+		<locale lang="en">your search returned no hits.</locale>
+		<locale lang="de">Ihre Suche hat kein Ergebnis ergeben.</locale>
+	</entity>
+	<entity id="form.title">
+		<locale lang="fr">formulaire de recherche</locale>
+		<locale lang="en">search form</locale>
+	</entity>
+	<entity id="results.title">
+		<locale lang="fr">résultats de recherche</locale>
+		<locale lang="en">search results</locale>
+	</entity>
+	<entity id="results.nbitemsperpage">
+		<locale lang="fr">nombre de résultats par page</locale>
+	</entity>
+	<entity id="results.nbitemsperpage-help">
+		<locale lang="fr">nombre de résultats à afficher par page.</locale>
+	</entity>
+	<entity id="results.enablesuggestions">
+		<locale lang="fr">activer les suggestions</locale>
+	</entity>
+	<entity id="results.enablesuggestions-help">
+		<locale lang="fr">activer ou non les suggestions de termes approchants.</locale>
+	</entity>
 </localization>
