--- a/i18n/bo/general/en_GB.xml
+++ b/i18n/bo/general/en_GB.xml
@@ -1,19 +1,19 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <i18n baseKey="m.solrsearch.bo.general" lcid="en_GB">
-  <key id="module-name">search engine</key>
-  <key id="tree-root-name">search engine</key>
-  <key id="system-folder-name">search engine</key>
-  <key id="active">active</key>
-  <key id="correction">correction</key>
-  <key id="deactivated">disabled</key>
-  <key id="draft">draft</key>
-  <key id="filed">filed</key>
-  <key id="publicated">published</key>
-  <key id="text_de">German synonyms</key>
-  <key id="text_en">English synonyms</key>
-  <key id="text_es">Spanish synonyms</key>
-  <key id="text_fr">French synonyms</key>
-  <key id="text_it">Italian synonyms</key>
-  <key id="text_nl">Dutch synonyms</key>
-  <key id="text_pt">Portuguese synonyms</key>
+	<key id="module-name">search engine</key>
+	<key id="tree-root-name">search engine</key>
+	<key id="system-folder-name">search engine</key>
+	<key id="active">active</key>
+	<key id="correction">correction</key>
+	<key id="deactivated">disabled</key>
+	<key id="draft">draft</key>
+	<key id="filed">filed</key>
+	<key id="publicated">published</key>
+	<key id="text_de">German synonyms</key>
+	<key id="text_en">English synonyms</key>
+	<key id="text_es">Spanish synonyms</key>
+	<key id="text_fr">French synonyms</key>
+	<key id="text_it">Italian synonyms</key>
+	<key id="text_nl">Dutch synonyms</key>
+	<key id="text_pt">Portuguese synonyms</key>
 </i18n>
