--- a/i18n/bo/tag/en_GB.xml
+++ b/i18n/bo/tag/en_GB.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <i18n baseKey="m.solrsearch.bo.tag" lcid="en_GB">
-  <key id="solrsearch-result-page">search results page</key>
+	<key id="solrsearch-result-page">search results page</key>
 </i18n>
