--- a/i18n/bo/blocks/en_GB.xml
+++ b/i18n/bo/blocks/en_GB.xml
@@ -1,8 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <i18n baseKey="m.solrsearch.bo.blocks" lcid="en_GB">
-  <key id="searchform">search form</key>
-  <key id="searchresults">search results</key>
-  <key id="advancedsearch-block-error">your advanced search block is configured poorly!</key>
-  <key id="advancedsearch-emptyquery-error">your search does not contain any valid terms.</key>
-  <key id="advancedsearch-emptyresults-error">your search has not returned any results.</key>
+	<key id="searchform">search form</key>
+	<key id="searchresults">search results</key>
+	<key id="advancedsearch-block-error">your advanced search block is configured poorly!</key>
+	<key id="advancedsearch-emptyquery-error">your search does not contain any valid terms.</key>
+	<key id="advancedsearch-emptyresults-error">your search has not returned any results.</key>
 </i18n>
