--- a/i18n/bo/blocks/form/en_GB.xml
+++ b/i18n/bo/blocks/form/en_GB.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <i18n baseKey="m.solrsearch.bo.blocks.form" lcid="en_GB">
-  <key id="title">search form</key>
+	<key id="title">search form</key>
 </i18n>
