--- a/i18n/bo/blocks/form/fr_FR.xml
+++ b/i18n/bo/blocks/form/fr_FR.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <i18n baseKey="m.solrsearch.bo.blocks.form" lcid="fr_FR">
 	<key id="title">formulaire de recherche</key>
 	<key id="submitmethod">méthode de soumission</key>
