--- a/i18n/bo/blocks/fr_FR.xml
+++ b/i18n/bo/blocks/fr_FR.xml
@@ -1,8 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <i18n baseKey="m.solrsearch.bo.blocks" lcid="fr_FR">
-  <key id="searchform">formulaire de recherche</key>
-  <key id="searchresults">résultats de recherche</key>
-  <key id="advancedsearch-block-error">votre bloc de recherche avancée est mal configuré!</key>
-  <key id="advancedsearch-emptyquery-error">votre recherche ne contient aucun terme valide.</key>
-  <key id="advancedsearch-emptyresults-error">votre recherche n'a retourné aucun résultat.</key>
+	<key id="searchform">formulaire de recherche</key>
+	<key id="searchresults">résultats de recherche</key>
+	<key id="advancedsearch-block-error">votre bloc de recherche avancée est mal configuré!</key>
+	<key id="advancedsearch-emptyquery-error">votre recherche ne contient aucun terme valide.</key>
+	<key id="advancedsearch-emptyresults-error">votre recherche n'a retourné aucun résultat.</key>
 </i18n>
