--- a/i18n/bo/general/fr_FR.xml
+++ b/i18n/bo/general/fr_FR.xml
@@ -1,19 +1,19 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <i18n baseKey="m.solrsearch.bo.general" lcid="fr_FR">
-  <key id="module-name">moteur de recherche</key>
-  <key id="tree-root-name">moteur de recherche</key>
-  <key id="system-folder-name">moteur de recherche</key>
-  <key id="text_fr">Synonymes langue française</key>
-  <key id="text_en">Synonymes langue anglaise</key>
-  <key id="text_de">Synonymes langue allemande</key>
-  <key id="text_it">Synonymes langue italienne</key>
-  <key id="text_es">Synonymes langue espagnole</key>
-  <key id="text_pt">Synonymes langue portuguaise</key>
-  <key id="text_nl">Synonymes langue néerlandaise</key>
-  <key id="publicated">publié</key>
-  <key id="draft">brouillon</key>
-  <key id="active">actif</key>
-  <key id="deactivated">désactivé</key>
-  <key id="filed">archivé</key>
-  <key id="correction">correction</key>
+	<key id="module-name">moteur de recherche</key>
+	<key id="tree-root-name">moteur de recherche</key>
+	<key id="system-folder-name">moteur de recherche</key>
+	<key id="text_fr">Synonymes langue française</key>
+	<key id="text_en">Synonymes langue anglaise</key>
+	<key id="text_de">Synonymes langue allemande</key>
+	<key id="text_it">Synonymes langue italienne</key>
+	<key id="text_es">Synonymes langue espagnole</key>
+	<key id="text_pt">Synonymes langue portuguaise</key>
+	<key id="text_nl">Synonymes langue néerlandaise</key>
+	<key id="publicated">publié</key>
+	<key id="draft">brouillon</key>
+	<key id="active">actif</key>
+	<key id="deactivated">désactivé</key>
+	<key id="filed">archivé</key>
+	<key id="correction">correction</key>
 </i18n>
