--- a/i18n/bo/tag/de_DE.xml
+++ b/i18n/bo/tag/de_DE.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <i18n baseKey="m.solrsearch.bo.tag" lcid="de_DE">
-  <key id="solrsearch-result-page">Suchergebnisseite</key>
+	<key id="solrsearch-result-page">Suchergebnisseite</key>
 </i18n>
