--- a/i18n/bo/tag/fr_FR.xml
+++ b/i18n/bo/tag/fr_FR.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <i18n baseKey="m.solrsearch.bo.tag" lcid="fr_FR">
-  <key id="solrsearch-result-page">page des résultats de recherche</key>
+	<key id="solrsearch-result-page">page des résultats de recherche</key>
 </i18n>
