[REFACTOR] Rename publication status PUBLICATED to PUBLISHED

--- a/i18n/bo/general/de_DE.xml
+++ b/i18n/bo/general/de_DE.xml
@@ -10,7 +10,7 @@
 	<key id="text_es">Synonyme spanische Sprache</key>
 	<key id="text_pt">Synonyme portugiesische Sprache</key>
 	<key id="text_nl">Synonyme holländische Sprache</key>
-	<key id="publicated">veröffentlicht</key>
+	<key id="published">veröffentlicht</key>
 	<key id="draft">Entwurf</key>
 	<key id="active">aktiv</key>
 	<key id="deactivated">deaktiviert</key>
