--- a/i18n/bo/general/fr_FR.xml
+++ b/i18n/bo/general/fr_FR.xml
@@ -10,7 +10,7 @@
 	<key id="text_es">Synonymes langue espagnole</key>
 	<key id="text_pt">Synonymes langue portuguaise</key>
 	<key id="text_nl">Synonymes langue néerlandaise</key>
-	<key id="publicated">publié</key>
+	<key id="published">publié</key>
 	<key id="draft">brouillon</key>
 	<key id="active">actif</key>
 	<key id="deactivated">désactivé</key>
