--- a/i18n/bo/general/en_GB.xml
+++ b/i18n/bo/general/en_GB.xml
@@ -8,7 +8,7 @@
 	<key id="deactivated">disabled</key>
 	<key id="draft">draft</key>
 	<key id="filed">filed</key>
-	<key id="publicated">published</key>
+	<key id="published">published</key>
 	<key id="text_de">German synonyms</key>
 	<key id="text_en">English synonyms</key>
 	<key id="text_es">Spanish synonyms</key>
